# my-eeg

./: .gitignore  pyproject.toml
.trae/rules/: git-commit-message.md
src/: EEG_FFT.ipynb  mne_load_datasets_demo.ipynb  mne_load_datasets_demo.py  mne_sample_preprocessing.ipynb  mne_sample_preprocessing.py  save_figure.ipynb  small.ipynb  test.ipynb  test_mne_path.ipynb
src/markdowm/: MNE-Python-EEG-Datasets.md  MNE-preprocessing-files.md  MNE-sample-data-summary.md  MNE-sample-preprocessing-plan.md  deepseek.md  gpt.md  mimo.md  preprocess.md  psd.md
